# EasyLang

./: .gitattributes  .gitmodules  ASTs.cpp  ASTs.h  Backend.h  CMakeLists.txt  EnumToString.cpp  EnumToString.h  Enums.h  Exceptions.h  InterpreterBackend.cpp  InterpreterBackend.h  Lexer.cpp  Lexer.h  Macros.h  PrimativeValue.cpp  PrimativeValue.h  README.md  Scope.cpp  Scope.h  System.cpp  System.h  arraylib.cpp  arraylib.h  corelib.cpp  iolib.cpp  iolib.h  main.cpp
Tests/: AstTests.h  InterpreterTests.h  LexerTests.h  TempAstTests.h  VmTests.h
include/: ASTs.h  Backend.h  Catch.h  CodeGenerator.h  Console.h  Definitions.h  EasyEngine.h  Exceptions.h  FunctionDispatch.h  InterpreterBackend.h  InterpreterEasyEngine.h  LLVMBackend.h  LLVMEasyEngine.h  Lexer.h  Macros.h  PrimativeValue.h  Scope.h  System.h  Vm.h  VmBackend.h  VmEasyEngine.h
include/lib/: arraylib.h  corelib.h  iolib.h
src/: ASTs.cpp  CodeGenerator.cpp  EasyEngine.cpp  InterpreterBackend.cpp  LLVMBackend.cpp  Lexer.cpp  PrimativeValue.cpp  Scope.cpp  System.cpp  Vm.cpp  VmBackend.cpp  main.cpp
src/lib/: arraylib.cpp  corelib.cpp  iolib.cpp
